# api/docs/swagger.json
@@ -636,7 +636,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/reservation.ReservationOrderReq"
+                            "$ref": "#/definitions/reservation.ReservationOrderUpdate"
                         }
                     }
                 ],
@@ -1409,6 +1409,20 @@
                 }
             }
         },
+        "reservation.ReservationOrderUpdate": {
+            "type": "object",
+            "properties": {
+                "menu_item_id": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "string"
+                },
+                "reservation_id": {
+                    "type": "string"
+                }
+            }
+        },
         "reservation.ReservationReq": {
             "type": "object",
             "properties": {
@@ -1496,13 +1510,6 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
